# rlibphonenumber

./: Cargo.toml  Readme.md
benches/: format_bench.rs  parsing_bench.rs
src/: lib.rs  regex_based_matcher.rs  regex_util.rs  regexp_cache.rs  region_code.rs  string_util.rs
src/i18n/: mod.rs
src/interfaces/: mod.rs
src/macros/: mod.rs
src/phonenumberutil/: enums.rs  errors.rs  helper_constants.rs  helper_functions.rs  helper_types.rs  mod.rs  phone_number_regexps_and_mappings.rs  phonenumberutil.rs  phonenumberutil_internal.rs  regex_and_mappings.rs
src/phonenumberutil/helper_constants/: helper_constants.rs  metadata.rs  mod.rs
src/proto_gen/: mod.rs
src/tests/: mod.rs  phonenumberutil_tests.rs  region_code.rs  test_metadata.rs  tests.rs
tools/java/: .gitignore  Readme.md  pom.xml
tools/java/common/: pom.xml
tools/java/common/src/com/google/i18n/phonenumbers/: CopyrightNotice.java
tools/java/rust-build/: pom.xml
tools/java/rust-build/src/com/google/i18n/phonenumbers/: BuildMetadataRustFromXml.java  EntryPoint.java  RustMetadataGenerator.java
tools/java/rust-build/test/com/google/i18n/phonenumbers/: BuildMetadataRustFromXmlTest.java  CppMetadataGeneratorTest.java  RustMetadataGeneratorTest.java
tools/scripts/: generate_metadata.sh
