[package]
name = "rlibphonenumber"
version = "0.1.0"
edition = "2024"

build = "build/rust_build.rs"

[dependencies]
# logging standard in rust
log = "0.4.27"
# helpful error package
thiserror = "2.0.12"
# protobuf lib required to use .proto files from assets
protobuf = "3.7.2"
# optimized concurrent map
dashmap = "6.1.0"
# just regex package
regex = "1.11.1"
# for fast 0-alloc int to string conversion
itoa = "1.0.15"
# simple macro for single allocation 
# concatenation of strings
fast-cat = "0.1.1"

# lib for derive enum iteration
strum = { version = "0.27.1", features = ["derive"] }

# Simple lib to converts any unicode valid chars into decimals 
dec_from_char = "0.2.0"

[build-dependencies]
thiserror = "2.0.12"
protobuf-codegen = "3.7.2"

[dev-dependencies]
colog = "1.3.0"
env_logger = "0.11.8"